# ansak-string

./: .gitattributes  .gitmodules  AnsakAddLib.cmake  CHANGES  CMakeLists.txt  FindANSAK.cmake  LICENSE  Makefile  README.BUILDING.md  README.md  WindowsCRuntime.cmake  choosep3.py  configure  configure.cmd  configure.py  cygwin-getsh-sqlite  make.py  packaging.cmake  project.py
NSIS/: ansak-library-bsd-2clause.txt  ansak-string.nsi
base/: string.cxx  string_internal.hxx  string_splitjoin.hxx
base/unitTests/: stringSplitJoinTest.cxx  stringTest.cxx
cmake/modules/: CodeCoverage.cmake  FindCPPUnit.cmake  Findsqlite3.cmake  WindowsCRuntime.cmake
docs/: structure
interface/: config.hxx  config_io.hxx  config_types.hxx  file_handle.hxx  file_handle_exception.hxx  file_of_lines.hxx  file_of_lines_exception.hxx  file_path.hxx  file_system_path.hxx  nullptr_exception.hxx  parse_args.hxx  runtime_exception.hxx  sqlite_db.hxx  sqlite_db_pragmas.hxx  sqlite_exception.hxx  sqlite_statement.hxx  string.hxx  string_splitjoin.hxx  string_trim.hxx  temp_directory.hxx  time_stamp.hxx
interface/internal/: string_decode_utf8.hxx
mkUnicodeTestData/: mkUnicodeTestData.cxx
mock/: CMakeLists.txt
mock/file/: CMakeLists.txt  mock_file_handle.cxx  mock_file_handle.hxx  mock_file_handle_exception.cxx  mock_file_handle_exception.hxx  mock_file_system.cxx  mock_file_system.hxx  mock_file_system_path.cxx  mock_file_system_path.hxx
mock/os/: CMakeLists.txt  mock_file_system.cxx  mock_file_system.hxx  mock_operating_system.cxx  mock_operating_system.hxx
mock/sqlite/: CMakeLists.txt  mock_sqlite_db.cxx  mock_sqlite_db.hxx  mock_sqlite_errmsg.cxx  mock_sqlite_errmsg.hxx  mock_sqlite_statement.cxx  mock_sqlite_statement.hxx
source/: CMakeLists.txt  encoding_check_predicate.cxx  string.cxx  string_decode_utf8.cxx  string_internal.hxx  string_tolower.cxx  string_toutf8.cxx
source/bits/: char_is_unicode.cxx
source/bits10/: char_is_unicode.cxx  char_to_lower.cxx
source/bits11/: char_is_unicode.cxx
source/bits12/: char_is_unicode.cxx
source/bits121/: char_is_unicode.cxx  char_to_lower.cxx
source/bits13/: char_is_unicode.cxx  char_to_lower.cxx
source/bits14/: char_is_unicode.cxx  char_to_lower.cxx
source/bits15/: char_is_unicode.cxx  char_to_lower.cxx
source/bits16/: char_is_unicode.cxx  char_to_lower.cxx
source/bits7/: char_is_unicode.cxx  char_to_lower.cxx
source/bits8/: char_is_unicode.cxx  char_to_lower.cxx
source/bits9/: char_is_unicode.cxx  char_to_lower.cxx
source/config/: CMakeLists.txt  config.cxx  config_atom.cxx  config_io_file.cxx  config_io_registry.cxx
source/file/: CMakeLists.txt  file_handle.cxx  file_handle_exception.cxx  file_system_path.cxx
source/file-tools/: CMakeLists.txt  file_of_lines.cxx  file_of_lines_core.cxx  file_of_lines_exception.cxx  file_system_path_temp_dir_impl.cxx  temp_directory.cxx  text_file_utilities.cxx
source/include/: config_atom.hxx  config_paths.hxx  endianness.hxx  file_of_lines_core.hxx  file_system_primitives.hxx  operating_system_primitives.hxx  sqlite_retrieval_exception.hxx  sqlite_retrieval_var.hxx  sqlite_statement_impl.hxx  string_decode_utf8.hxx  string_internal.hxx  temp_file_wrapper.hxx  text_file_utilities.hxx  windows_registry_key.hxx
source/os/: CMakeLists.txt
source/primitives/: CMakeLists.txt  file_path.cxx  nullptr_exception.cxx  parse_args.cxx  runtime_exception.cxx  time_stamp.cxx
source/sqlite/: CMakeLists.txt  sqlite_db.cxx  sqlite_db_pragmas.cxx  sqlite_exception.cxx  sqlite_retrieval_exception.cxx  sqlite_retrieval_var.cxx  sqlite_statement.cxx  sqlite_statement_impl.cxx
source/string/: CMakeLists.txt  encoding_check_predicate.cxx  string.cxx  string_decode_utf8.cxx  string_tolower.cxx  string_toutf8.cxx
source/string/bits7/: char_is_unicode.cxx  char_to_lower.cxx
source/string/bits8/: char_is_unicode.cxx  char_to_lower.cxx
source/string/bits9/: char_is_unicode.cxx  char_to_lower.cxx
src/: encoding_check_predicate.cxx  string.cxx  string.hxx  string_tolower.cxx  string_toutf8.cxx
submods/: CMakeLists.txt
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/integration/config/: CMakeLists.txt  config_io_file_test.cxx  config_io_registry_test.cxx
test/integration/file/: CMakeLists.txt  file_handle_itest.cxx  file_system_path_itest.cxx
test/integration/file-tools/: CMakeLists.txt  ifile_of_lines.cxx  ifile_of_lines_core.cxx  itext_file_utilities.cxx
test/integration/sqlite/: CMakeLists.txt  sqliteDBTest.cxx  sqlitePragmaTest.cxx  sqliteStmtTest.cxx
test/mkUnicodeTestData/: CMakeLists.txt  mkUnicodeTestData.cxx
test/unit/: CMakeLists.txt  char_is_unicode_test.cxx  encode_predicate_test.cxx  string_decode_utf8_test.cxx  string_splitjoin_test.cxx  string_test.cxx  string_tolower_test10.cxx  string_tolower_test13.cxx  string_tolower_test15.cxx  string_tolower_test16.cxx  string_tolower_test7.cxx  string_tolower_test8.cxx  string_tolower_test9.cxx  string_trim_test.cxx  string_wchar_tchar.cxx  string_wide_tchar.cxx  string_with_predicate_test.cxx
test/unit/config/: CMakeLists.txt  config_atom_test.cxx  config_path_test.cxx  config_test.cxx
test/unit/file/: CMakeLists.txt  file_handle_test.cxx  file_system_path_test.cxx
test/unit/file-tools/: CMakeLists.txt  file_of_lines_core_test.cxx  file_of_lines_exception_test.cxx  file_of_lines_test.cxx  temp_directory_test.cxx  text_file_utilities_test.cxx
test/unit/os/: CMakeLists.txt  test_os_layer.cxx  test_win32_registry.cxx
test/unit/primitives/: CMakeLists.txt  file_path_test.cxx  nullptr_exception_test.cxx  parse_args_test.cxx  runtime_exception_test.cxx  time_stamp_test.cxx
test/unit/sqlite/: CMakeLists.txt  test_sqlite_db.cxx  test_sqlite_exception.cxx  test_sqlite_pragmas.cxx  test_sqlite_retrieval_exception.cxx  test_sqlite_statement.cxx
test/unit/string/: CMakeLists.txt  char_is_unicode_test.cxx  encode_predicate_test.cxx  string_decode_utf8_test.cxx  string_splitjoin_test.cxx  string_test.cxx  string_tolower_test7.cxx  string_tolower_test8.cxx  string_tolower_test9.cxx  string_with_predicate_test.cxx
(+26 files in other folders)
